@@ -69,5 +69,5 @@ Other information
 ----- version <VER>-<REL> -----
 Initial release
 
-Cygwin port maintained by: <Your Name Here> <Your email here>
-Copyright (C) YYYY Your Name; Licenced under GPL v2 or later
+Cygwin port maintained by: <Firstname Lastname> <Your email here>
+Copyright (C) YYYY Firstname Lastname; Licenced under GPL v2 or later
