@@ -1,3 +1,8 @@
+2007-10-18  Jari Aalto  <jari.aalto@cante.net>
+
+	* etc/template/*: Change all 'Your Name' phrases to
+	'Firstname Lastname'.
+
 2007-10-01  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.sh: (CygbuildCmdInstallCheckShellFiles):
